[tool.poetry]
name = "count-tokens"
version = "0.7.0"
description = "Count number of tokens in the text file using toktoken tokenizer from OpenAI."
authors = ["Krystian Safjan <ksafjan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "count_tokens"}]

keywords = ["count", "tokens", "toktoken", "openai", "tokenizer"]
homepage = "https://github.com/izikeros/count_tokens"
repository = "https://github.com/izikeros/count_tokens"
documentation = "https://github.com/izikeros/count_tokens"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.4.0"

[tool.poetry.scripts]
count-tokens = 'count_tokens.count:main'

[tool.poetry.group.dev.dependencies]
tox = "^4.6.3"
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
