[tool.poetry]
name = "count-tokens"
version = "0.7.3"
description = "Count number of tokens in the text file using tiktoken tokenizer from OpenAI."
authors = ["Krystian Safjan <ksafjan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "count_tokens"}]

keywords = ["count", "tokens", "tiktoken", "openai", "tokenizer"]
homepage = "https://github.com/izikeros/count_tokens"
repository = "https://github.com/izikeros/count_tokens"
documentation = "https://github.com/izikeros/count_tokens"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.9.0"

[tool.poetry.scripts]
count-tokens = 'count_tokens.count:main'

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
